=== 1.1.5 (25 March 2008)

 * Fixed about response for classifier.
 * Added memory leak test harness.
 * Fixed memory leaks in item and feed addition.
 
=== 1.1.4 (24 March 2008)

 * Fixed default load_item_since time. Forgotten before.
 * Added some logging to item_cache_load.

=== 1.1.3 (24 March 2008)

 * Fixed feed addition to handle feed without titles.
 * Parameterized wait time for item cache updating. This allows you to set the time to wait for more
   items before triggering a new classification job.  Default is 60 seconds.
 * Added load_item_since parameter. This is the number of days worth of items the classifier
   with load on startup. Default is 30.
 * Added index on entries(updated).
 
=== 1.1.2

 * Classifier handles storage and atomization of item tokens itself. (Prevents database deadlocks)
 * Turn off debug and trace messages unless configured with --enable-debug
 * Reports git version instead of svn version.
 * Prevent adding new items from triggering a new classification job for every tag on every item.
   Instead it will now allow items to build up to 200 before new jobs a created.  If there is a
   lull in the addition of new items (currently only 1 second) it will trigger jobs for what it has
   already added.  1 second might not be enough though so this should probably be parameterized.

=== 1.1.1

 * Handle incremental posting of http data.
 
=== 1.1.0

 * Supports item cache architecture.

=== 1.0

 * Initial release